fix website overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@
 }
 
 div .row {
-  --bs-gutter-x: 1.5rem;
+  --bs-gutter-x: 0;
   --bs-gutter-y: 0;
+  margin: 0 20px;
 }
 
 button {
